--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Sofia&display=swap');
 html {
   box-sizing: border-box;
 }
@@ -16,6 +17,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 .quote-container {
   width: auto;
@@ -85,7 +87,11 @@ button:active{
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-
+.credits {
+margin-top: 100px;
+font-family: 'Sofia', cursive;
+font-weight: 600;
+}
 /* Media query: Tablet or Smaller */
 @media screen and (max-width: 1000px){
   .quote-container{
