--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ button:active{
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 16px solid #f3f3f3; 
+  border-top: 16px solid #3498db; 
   border-radius: 50%;
   width: 120px;
   height: 120px;
@@ -101,4 +101,4 @@ font-weight: 600;
   .quote-text{
     font-size: 2.5rem;
   }
-}
+} 
